test/files/neg/t667.check
t667.scala:8: error: illegal cyclic reference involving class Ni
    class Ni extends super.Ni with Ni;
             ^
one error found
